srcs/tester/base/list/merge/log.txt
In file included from ./base/list/merge/patched.cpp:3:
In file included from ../list.hpp:3:
In file included from ../sfinae.hpp:4:
../iterator.hpp:58:35: error: called object type 'ft::list_iterator<ft::bidirectional_iterator_tag, double, long, ft::list<double, std::allocator<double> >::Node<double> *, double &>::pointer' (aka 'ft::list<double, std::allocator<double> >::Node<double> *') is not a function or function pointer
  reference operator*() { return *ptr_(); };
                                  ^~~~
./base/list/merge/patched.cpp:34:22: note: in instantiation of member function 'ft::list_iterator<ft::bidirectional_iterator_tag, double, long, ft::list<double, std::allocator<double> >::Node<double> *, double &>::operator*' requested here
 std::cout << ' ' << *it;
                     ^
1 error generated.
